# WeatherBot

./: .env.example  .gitignore  AGENT-CLI-TESTING.md  CLAUDE.md  config.example.toml  pyproject.toml
.planning/: HUB-FINDINGS-HANDOFF.md  HUMAN-UAT-PENDING.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  WHOLE-PROJECT-REVIEW.md  audit-raw.json  config.json  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: panel-dead-after-first-tap.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v2.0-GATE2-UAT.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.1-MILESTONE-AUDIT.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md
.planning/phases/01-first-briefing-end-to-end/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW.md  01-SECURITY.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md  SKELETON.md
.planning/phases/02-real-config-locations-content-templates/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-REVIEW.md  02-05-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-SECURITY.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-always-on-scheduler/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW.md  03-SECURITY.md  03-UAT.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-retry-then-alert-reliability/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md  04-REVIEW.md  04-SECURITY.md  04-UAT.md  04-VALIDATION.md  04-VERIFICATION.md  deferred-items.md
.planning/phases/05-deployment-reboot-survival/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-PATTERNS.md  05-RESEARCH.md  05-REVIEW.md  05-SECURITY.md  05-UAT.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-shared-lookup-core-command-parser/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-PATTERNS.md  06-RESEARCH.md  06-VALIDATION.md
.planning/phases/07-cli-weather-location-one-shot/: 07-01-PLAN.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
deploy/: PROMOTION-LEDGER.md  README.md  REPIN-RITUAL.md  bot.service.template  weatherbot.service
templates/: briefing-compact.txt  briefing-multiline.txt  briefing-sectioned.txt  forecast-weekday-compact.line.txt  forecast-weekday-compact.txt  forecast-weekday-detailed.line.txt  forecast-weekend-detailed.txt  renderer.py
tests/: conftest.py  test_aggregate.py  test_bot.py  test_cache.py  test_channel.py  test_cli.py  test_client.py  test_command.py  test_command_views.py  test_config.py  test_config_holder.py  test_config_holder_generic.py  test_config_uv.py  test_dead_code_removed.py  test_dispatch.py  test_exception_identity.py  test_filewatch.py  test_flags.py  test_forecast_lookup.py  test_forecast_render.py  test_golden_cli.py  test_golden_coverage_fill.py  test_golden_custom_ids.py  test_golden_db.py  test_golden_embeds.py  test_golden_harness.py  test_golden_schedule.py  test_import_hygiene.py  test_injection_registry.py  test_interactive_package.py  test_lifecycle_module.py  test_lookup.py  test_models.py  test_module_provenance.py  test_multiday.py  test_ops_selfcheck.py  test_oracle_selfproof.py  test_panel.py  test_panelkit_marker.py  test_ports.py  (+16 more)
tests/fixtures/: current_imperial_clear.json  current_metric_clear.json  forecast_imperial_clear.json  forecast_imperial_offset_minus.json  forecast_imperial_offset_plus.json  forecast_imperial_rainy.json  forecast_metric_clear.json  geocode_ambiguous.json  geocode_austin.json  onecall_8day_imperial.json  onecall_8day_metric.json  onecall_imperial_alert.json  onecall_imperial_clear.json  onecall_imperial_clouds_clear.json  onecall_imperial_cloudy_daily.json  onecall_imperial_cloudy_hourly.json  onecall_imperial_dtskew.json  onecall_imperial_extreme.json  onecall_imperial_highuv.json  onecall_imperial_multialert.json  onecall_imperial_rainy.json  onecall_imperial_uvbelow.json  onecall_imperial_uvcross.json  onecall_metric_clear.json  onecall_metric_dtskew.json  onecall_metric_rainy.json
weatherbot/: __init__.py  __main__.py  _redact.py  branding.py  cli.py
weatherbot/channels/: __init__.py  base.py  discord.py  factory.py
weatherbot/config/: __init__.py  holder.py  loader.py  models.py  settings.py
weatherbot/interactive/: __init__.py  bot.py  cache.py  command.py  dispatch.py  lookup.py  panel.py  registry.py  state.py
weatherbot/ops/: __init__.py  pidfile.py  sdnotify.py  selfcheck.py
weatherbot/reliability/: __init__.py  retry.py
weatherbot/scheduler/: __init__.py  catchup.py  context.py  daemon.py  days.py  uvmonitor.py  wiring.py
weatherbot/weather/: __init__.py  aggregate.py  client.py  dates.py  models.py  multiday.py  store.py  uv.py
yahir_reusable_bot/channels/: __init__.py
yahir_reusable_bot/config/: __init__.py
yahir_reusable_bot/discord/: __init__.py  panelkit.py
yahir_reusable_bot/lifecycle/: __init__.py
yahir_reusable_bot/ports/: __init__.py  alerts.py
yahir_reusable_bot/reliability/: __init__.py
(+563 files in other folders)
