[project]
name = "weatherbot"
version = "0.1.0"
description = "Personal always-on morning weather briefing bot (OpenWeather -> Discord)."
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2,<4",
    "cachetools>=6,<8",
    "discord-webhook>=1.4.1",
    "discord.py>=2.7.1,<3",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "watchfiles>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
weatherbot = "weatherbot.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "time-machine>=2.16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
