[project]
name = "weatherbot"
version = "0.1.0"
description = "Personal always-on morning weather briefing bot (OpenWeather -> Discord)."
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2,<4",
    "cachetools>=6,<8",
    "discord-webhook>=1.4.1",
    "discord.py>=2.7.1,<3",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "watchfiles>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
weatherbot = "weatherbot.cli:main"

[tool.hatch.build.targets.wheel]            # D-02 — without this hatchling silently drops the 2nd package
packages = ["weatherbot", "yahir_reusable_bot"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
    "syrupy>=5.3.4",
    "time-machine>=2.16",
    "grimp>=3.14",                           # D-09 — import-hygiene gate (dev-only)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.coverage.run]
branch = true                          # D-06 — branch (not line) coverage is mandatory
source = [                             # D-07 — move-path packages ONLY
    "weatherbot/channels",
    "weatherbot/scheduler",
    "weatherbot/config",
    "weatherbot/reliability",
    "weatherbot/ops",
    "weatherbot/interactive",
    "yahir_reusable_bot",                  # Pitfall 5 — moved code lives here now
]
# NOTE: weatherbot/weather (incl. store.py) is deliberately OUT of coverage scope
# (it stays app-side, D-07) — even though store.py's DB rows ARE snapshotted later by
# the DB-row golden. The golden pins store.py output; the coverage AUDIT does not
# measure store.py branches. No standing coverage gate (D-08 — this is a one-time audit,
# not a recurring threshold); no --cov in pytest addopts (the audit is invoked explicitly
# in Plan 05).

[tool.coverage.report]
show_missing = true                    # term-missing equivalent
exclude_also = [                       # D-09 — systematic defensive patterns in config
    "if TYPE_CHECKING:",               # type-only import blocks (used across the move-path pkgs)
    "raise NotImplementedError",
    "\\.\\.\\.",                       # bare ellipsis bodies (Protocol stubs)
]
