[project]
name = "weatherbot"
version = "0.1.0"
description = "Personal always-on morning weather briefing bot (OpenWeather -> Discord)."
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2,<4",
    "cachetools>=6,<8",
    "discord-webhook>=1.4.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "watchfiles>=1.2.0",
    # The reusable bot core, extracted to its own repo at the Phase-28 physical split.
    # It transitively pins the exact discord.py version (the live-panel custom_id wire
    # contract) — do NOT re-declare discord.py app-side. Resolved via [tool.uv.sources] below.
    "yahir-reusable-bot",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
weatherbot = "weatherbot.cli:main"

[tool.hatch.build.targets.wheel]            # D-02 — explicit so hatchling never silently drops a package
packages = ["weatherbot"]

[tool.uv.sources]                           # D-04 — deploy git pin, tag-pinned; uv.lock freezes the resolved sha.
# file:// fallback: YahirReusableBot has no remote yet (28-01). A real fetchable remote is a
# deploy prerequisite for the Gate-2 host `uv sync --frozen` — swap this URL when the remote exists.
yahir-reusable-bot = { git = "file:///home/yahir/Projects/YahirReusableBot", tag = "v0.1.0" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
    "syrupy>=5.3.4",
    "time-machine>=2.16",
    "grimp>=3.14",                           # D-09 — import-hygiene gate (dev-only)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.coverage.run]
branch = true                          # D-06 — branch (not line) coverage is mandatory
source = [                             # D-07 — move-path packages ONLY
    "weatherbot/channels",
    "weatherbot/scheduler",
    "weatherbot/config",
    "weatherbot/reliability",
    "weatherbot/ops",
    "weatherbot/interactive",
    # The reusable bot core is now an EXTERNAL git-pinned dependency (Phase-28 split, Pitfall 5):
    # its coverage is measured in its own repo, not here.
]
# NOTE: weatherbot/weather (incl. store.py) is deliberately OUT of coverage scope
# (it stays app-side, D-07) — even though store.py's DB rows ARE snapshotted later by
# the DB-row golden. The golden pins store.py output; the coverage AUDIT does not
# measure store.py branches. No standing coverage gate (D-08 — this is a one-time audit,
# not a recurring threshold); no --cov in pytest addopts (the audit is invoked explicitly
# in Plan 05).

[tool.coverage.report]
show_missing = true                    # term-missing equivalent
exclude_also = [                       # D-09 — systematic defensive patterns in config
    "if TYPE_CHECKING:",               # type-only import blocks (used across the move-path pkgs)
    "raise NotImplementedError",
    "\\.\\.\\.",                       # bare ellipsis bodies (Protocol stubs)
]
